update pic 2
