# routes/api.js
@@ -20,9 +20,9 @@ router.post('/login',controllers.api.common.LoginCtrl);
 
 router.delete('/logout',controllers.api.user.LogoutCtrl);
 
-router.get('/profile-view',controllers.api.user.ProfileViewCtrl);
+router.get('/profile/view',controllers.api.user.ProfileViewCtrl);
 
-router.put('/profile-update',controllers.api.user.ProfileUpdateCtrl);
+router.put('/profile/update',controllers.api.user.ProfileUpdateCtrl);
 
 
 router.put('/profile-pic/update',upload.single("profilePic"),controllers.api.user.ProfilePicUpdateCtrl);
